increase input font size to prevent auto zoom on mobile safari

--- a/src/LoginScreen/styles.scss
+++ b/src/LoginScreen/styles.scss
@@ -37,7 +37,7 @@
     padding: 0px 50px 0 10px;
     border: none;
     outline: none;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 300;
     letter-spacing: 1px;
 
